# SOTS

./: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile
client/: Cargo.toml
client/src/: app.rs  main.rs  state.rs
client/src/input/: mod.rs
client/src/network/: mod.rs
client/src/renderer/: mod.rs  shader.wgsl
docker/: Dockerfile  docker-compose.yml
server/: Cargo.toml
server/src/: config.rs  main.rs
server/src/game/: mod.rs
server/src/network/: mod.rs
shared/: Cargo.toml
shared/src/: combat.rs  lib.rs  physics.rs  protocol.rs  tick.rs  transport.rs  types.rs
