[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
tokio.workspace = true
socket2.workspace = true
bytes.workspace = true
crossbeam-channel.workspace = true
ahash.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
bincode.workspace = true
glam.workspace = true
