[package]
name    = "server"
version.workspace = true
edition.workspace = true

[dependencies]
shared            = { path = "../shared" }
tokio.workspace   = true
ahash.workspace   = true
parking_lot.workspace = true
hecs.workspace    = true
anyhow.workspace  = true
tracing.workspace = true
tracing-subscriber.workspace = true
bincode.workspace = true
serde.workspace   = true
glam.workspace    = true
spin_sleep.workspace = true
crossbeam-channel.workspace = true
